# methane_segmentation

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ablation.py  ablation_manual.py  convert_to_onnx.py  docker-compose.yml  install_torch.py  main.py  predict.py  predict_stable_diffusion.py  prepare_data.py  pyproject.toml  requirements.txt  shapeGrad.py  stableDiffusion.py  stable_diffusion_dogs_train.py  test.py  train.py  train.sh
methane_segmentation/datamodules/: default_datamodule.py  diffusion_datamodule.py  helpers.py
methane_segmentation/datasets/: diffusion_dataset.py
methane_segmentation/logging/: logging.py
methane_segmentation/models/: StableDiffusionModel.py  acc_unet.py  base_model.py  default_model.py  u_2_net_model.py
methane_segmentation/utils/: utils.py
terrain_segmentation/data_fetchers/: GoogleDriveClient.py  RoboflowClient.py  __init__.py
terrain_segmentation/datamodules/: default_datamodule.py  diffusion_datamodule.py  helpers.py
terrain_segmentation/datasets/: default_dataset.py  diffusion_dataset.py
terrain_segmentation/models/: StableDiffusionModel.py  base_model.py  default_model.py  u_2_net_model.py
terrain_segmentation/roboflow/: RoboflowClient.py
terrain_segmentation/utils/: utils.py
